--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                 <div class="main">Web App Development</div>
               </div>
               <div class="text">
-                Understands your business objectives and creates top-notch solutions that meet your needs leveraging
-                the best front-end development technologies and practices. I main goal is to engage your customers and
-                deliver robust user experience, build sophisticated web applications, single page applications, and
+                Understand your business objectives and create top-notch solutions that meet your needs leveraging the
+                best front-end development technologies and practices. My main goal is to engage your customers and
+                deliver a robust user experience, build sophisticated web applications, single-page applications and
                 cross-browser and cross-platform websites.
               </div>
             </div>
@@ -271,8 +271,8 @@
                 <div class="main">Back-End Development</div>
               </div>
               <div class="text">
-                I build sleek and intuitive web apps with powerful backend systems. Impress your users with well
-                designed and high performance applications. I am ready to help you no matter how complex your
+                I build sleek and intuitive web apps with powerful backend systems. Impress your users with
+                well-designed and high-performance applications. I am ready to help you no matter how complex your
                 application is and work with a variety of datastores (NoSQL & SQL). Working with multiple delivery
                 platforms such as mobile & web.
               </div>
@@ -288,7 +288,7 @@
                 <div class="main">Tech Support & Maintenance</div>
               </div>
               <div class="text">
-                Once the development process is over, there is always a place for improvements. And no matter how solid
+                Once the development process is over, there is always a place for improvement. And no matter how solid
                 the development effort was, bugs are inevitable. I can be there for you when an unexpected happens and
                 will help you get the most out of your product and bring peace of mind to your staff and customers.
               </div>
@@ -316,9 +316,9 @@
             <div class="box">
               <div class="text">Web App Development</div>
               <p>
-                Understands your business objectives and creates top-notch solutions that meet your needs leveraging
-                the best front-end development technologies and practices. I main goal is to engage your customers and
-                deliver robust user experience, build sophisticated web applications, single page applications, and
+                Understand your business objectives and create top-notch solutions that meet your needs leveraging the
+                best front-end development technologies and practices. My main goal is to engage your customers and
+                deliver a robust user experience, build sophisticated web applications, single-page applications and
                 cross-browser and cross-platform websites.
               </p>
             </div>
@@ -338,8 +338,8 @@
             <div class="box">
               <div class="text">Back-End Development</div>
               <p>
-                I build sleek and intuitive web apps with powerful backend systems. Impress your users with well
-                designed and high performance applications. I am ready to help you no matter how complex your
+                I build sleek and intuitive web apps with powerful backend systems. Impress your users with
+                well-designed and high-performance applications. I am ready to help you no matter how complex your
                 application is and work with a variety of datastores (NoSQL & SQL). Working with multiple delivery
                 platforms such as mobile & web.
               </p>
@@ -349,7 +349,7 @@
             <div class="box">
               <div class="text">Tech Support & Maintenance</div>
               <p>
-                Once the development process is over, there is always a place for improvements. And no matter how solid
+                Once the development process is over, there is always a place for improvement. And no matter how solid
                 the development effort was, bugs are inevitable. I can be there for you when an unexpected happens and
                 will help you get the most out of your product and bring peace of mind to your staff and customers.
               </p>
@@ -360,8 +360,8 @@
               <div class="text">SEO Optimization</div>
               <p>
                 Search engine optimization (SEO) refers to the process of improving your site's organic traffic and
-                ranking on search engines such as Google, Bing, and other search engines.
-                This includes creating high-quality content in addition to monitoring your site's technical health.
+                ranking on search engines such as Google, Bing, and other search engines. This includes creating
+                high-quality content in addition to monitoring your site's technical health.
               </p>
             </div>
           </div>
