--- a/index.html
+++ b/index.html
@@ -192,27 +192,11 @@
         </div>
 
         <div class="column right">
-          <ul>
-            <li><span>Mishka Sakhelashvili</span></li>
-            <li>Build customised websites to the highest specifications.</li>
-            <li>Work to under pressure and to tight deadlines.</li>
-            <li>Come up with solutions to seemingly intractable problems.</li>
-            <li>Carry out routine site maintenance. Drive projects forward.</li>
-            <li>Work closely with other developers and professionals.</li>
-            <li>Make recommendations on the use of new and emerging technologies.</li>
-            <li>Produce feasibility and usability reports for projects as well as accurate cost projections.</li>
-            <li>Organize and manage multiple priorities simultaneously.</li>
-            <li>Quickly fit into any existing team of developers.</li>
-            <li>
-              Building reusable components and front-end libraries for future use.
-            </li>
-            <li>
-              Collaborate with system engineers, data scientists, frontend developers and software developers to
-              implement solutions that are aligned with and extend shared platforms and solutions
-            </li>
-            <li>Work through a project life cycle & Communicate confidently.</li>
-          </ul>
-
+          Hi, I’m Mishka. Nice to meet you. Since beginning my journey as a freelance developer nearly 2 years ago, I've
+          done remote work for agencies, consulted for startups, and collaborated with talented people to create digital
+          products for both business and consumer use. I specialize in creating sites for individuals and small
+          businesses. Frequently your website is the first impression your customers will get, so make sure it’s a good
+          one. Take a look at my portfolio below, if you think I’d be a good contact me.
         </div>
       </div>
     </div>
@@ -1114,7 +1098,7 @@
       <h2 class="title">My Resume</h2>
       <div class="resume-content">
 
-        <div class="pdf">
+        <!-- <div class="pdf">
           <iframe
             src="./uploads/cv.pdf"
             frameBorder="0"
@@ -1122,6 +1106,98 @@
             height="100%"
             width="100%"
           ></iframe>
+        </div> -->
+
+        <div class="test">
+          <h2>Personal Information:</h2>
+          <ul>
+            <li><b>Tel:</b> +995 555 10 59 75</li>
+            <li><b>E-mail:</b> mishka.sakhelashvili@gmail.com</li>
+            <li>
+              <b> My Website </b>
+              (<a
+                href="https://mishka-sakhelashvili.github.io/portfolio/"
+                target="_blanck"
+              >
+                Link </a>)
+            </li>
+            <li>
+              <b>Github</b>
+              (<a
+                href="https://github.com/Mishka-Sakhelashvili/All__Projects/blob/main/README.md"
+                target="_blanck"
+              >
+                Link </a>)
+            </li>
+          </ul>
+          <br>
+
+          <h2>About Me:</h2>
+          <p>
+            Mobile (ReactNative, Flutter) and Web (React, Vue, VanillaJS, Node, PHP)
+            developer, <br />
+            work on both the user and server interface.
+          </p>
+
+          <br>
+          <h2>What can I do:</h2>
+          <ul>
+            <li>Build customised websites to the highest specifications.</li>
+            <li>Work to under pressure and to tight deadlines.</li>
+            <li>Come up with solutions to seemingly intractable problems.</li>
+            <li>Carry out routine site maintenance. Drive projects forward.</li>
+            <li>Work closely with other developers and professionals.</li>
+            <li>Produce feasibility and usability reports for projects as well as accurate cost projections.</li>
+            <li>
+              Organize and manage multiple priorities simultaneously.
+            </li>
+            <li>Quickly fit into any existing team of developers.</li>
+            <li>Building reusable components and front-end libraries for future use.</li>
+            <li>Collaborate with system engineers, data scientists, frontend developers and software developers to
+              implement
+              <br>
+              solutions that are aligned with and extend shared platforms and solutions</li>
+            <li>Work through a project life cycle & Communicate confidently.</li>
+          </ul>
+
+          <br>
+          <h2>
+            See my website for my projects (<a
+              href="https://mishka-sakhelashvili.github.io/portfolio/"
+              target="_blanck"
+            >Link</a>)
+          </h2>
+
+          <br>
+          <h2>Skills:</h2>
+          <ul>
+            <li>HTML / CSS / SASS / SCSS / LESS</li>
+            <li>
+              CSS Frameworks: [Material-UI / Styled-component / Bootstrap / Materialize
+              and etc.]
+            </li>
+            <li>JavaScript / Dart / Node / TypeScript / PHP</li>
+            <li>React Native / Flutter / React / Vue / Laravel / Express </li>
+            <li>Git, Npm, Yarn, Babel, webpack and etc.</li>
+            <li>SQL / NoSQL</li>
+          </ul>
+
+          <br>
+          <h2>Education:</h2>
+          <ul>
+            <li>
+              Iv. Javakhishvili Tbilisi University: <br />
+              Business Administration (Specialty: Finance and Banking)
+            </li>
+            <br />
+            <li>
+              Iv. Javakhishvili Tbilisi University: <br />
+              Exact natural science Faculty of Science: Mathematics
+            </li>
+          </ul>
+
+          <br>
+          <p>Thanks M.Sakhelashvili</p>
         </div>
 
         <a
