--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
         </div>
 
         <div class="column right">
-          Hi, I’m Mishka. Nice to meet you. Since beginning my journey as a freelance developer nearly 2 years ago, I've
+          Hi, I’m <span>Mishka</span>. Since beginning my journey as a freelance developer nearly 2 years ago, I've
           done remote work for agencies, consulted for startups, and collaborated with talented people to create digital
-          products for both business and consumer use. I specialize in creating sites for individuals and small
+          products for both business and consumer use. 
+          I specialize in creating sites for individuals and small
           businesses. Frequently your website is the first impression your customers will get, so make sure it’s a good
           one. Take a look at my portfolio below, if you think I’d be a good contact me.
         </div>
