--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@
     class="services"
     id="services"
   >
+    <div class="lamp">
+      <div class="lava">
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+      </div>
+    </div>
     <div class="max-width">
       <h2 class="title">My services</h2>
       <div class="serv-content">
