--- a/index.html
+++ b/index.html
@@ -484,6 +484,18 @@
     class="projects"
     id="projects"
   >
+    <div class="lamp">
+      <div class="lava">
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+      </div>
+    </div>
     <div class="max-width">
       <div class="projects-content">
         <h2 class="title">My Projects</h2>
@@ -1225,6 +1237,18 @@
     class="contact"
     id="contact"
   >
+    <div class="lamp">
+      <div class="lava">
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
+      </div>
+    </div>
     <div class="max-width">
       <h2 class="title">Contact me</h2>
 
