--- a/index.html
+++ b/index.html
@@ -1120,111 +1120,14 @@
     <div class="max-width">
       <h2 class="title">My Resume</h2>
       <div class="resume-content">
-
-        <!-- <div class="pdf">
+        <div class="cvContainer">
           <iframe
-            src="./uploads/cv.pdf"
-            frameBorder="0"
-            scrolling="auto"
-            height="100%"
-            width="100%"
+            src="./uploads/Mishka Sakhelashvili CV.html"
+            title="description"
           ></iframe>
-        </div> -->
-
-        <div class="test">
-          <h2>Personal Information:</h2>
-          <ul>
-            <li><b>Tel:</b> +995 555 10 59 75</li>
-            <li><b>E-mail:</b> mishka.sakhelashvili@gmail.com</li>
-            <li>
-              <b> My Website </b>
-              (<a
-                href="https://mishka-sakhelashvili.github.io/portfolio/"
-                target="_blanck"
-              >
-                Link </a>)
-            </li>
-            <li>
-              <b>Github</b>
-              (<a
-                href="https://github.com/Mishka-Sakhelashvili/All__Projects/blob/main/README.md"
-                target="_blanck"
-              >
-                Link </a>)
-            </li>
-          </ul>
-          <br>
-
-          <h2>About Me:</h2>
-          <p>
-            Mobile (ReactNative, Flutter) and Web (React, Vue, VanillaJS, Node, PHP)
-            developer, <br />
-            work on both the user and server interface.
-          </p>
-
-          <br>
-          <h2>What can I do:</h2>
-          <ul>
-            <li>Build customised websites to the highest specifications.</li>
-            <li>Work to under pressure and to tight deadlines.</li>
-            <li>Come up with solutions to seemingly intractable problems.</li>
-            <li>Carry out routine site maintenance. Drive projects forward.</li>
-            <li>Work closely with other developers and professionals.</li>
-            <li>Produce feasibility and usability reports for projects as well as accurate cost projections.</li>
-            <li>
-              Organize and manage multiple priorities simultaneously.
-            </li>
-            <li>Quickly fit into any existing team of developers.</li>
-            <li>Building reusable components and front-end libraries for future use.</li>
-            <li>Collaborate with system engineers, data scientists, frontend developers and software developers to
-              implement
-              <br>
-              solutions that are aligned with and extend shared platforms and solutions</li>
-            <li>Work through a project life cycle & Communicate confidently.</li>
-          </ul>
-
-          <br>
-          <h2>
-            See my website for my projects (<a
-              href="https://mishka-sakhelashvili.github.io/portfolio/"
-              target="_blanck"
-            >Link</a>)
-          </h2>
-
-          <br>
-          <h2>Skills:</h2>
-          <ul>
-            <li>HTML / CSS / SASS / SCSS / LESS</li>
-            <li>
-              CSS Frameworks: [Material-UI / Styled-component / Bootstrap / Materialize
-              and etc.]
-            </li>
-            <li>JavaScript / Dart / Node / TypeScript / PHP</li>
-            <li>React Native / Flutter / React / Vue / Laravel / Express </li>
-            <li>Git, Npm, Yarn, Babel, webpack and etc.</li>
-            <li>SQL / NoSQL</li>
-          </ul>
-
-          <br>
-          <h2>Education:</h2>
-          <ul>
-            <li>
-              Iv. Javakhishvili Tbilisi University: <br />
-              Business Administration (Specialty: Finance and Banking)
-            </li>
-            <br />
-            <li>
-              Iv. Javakhishvili Tbilisi University: <br />
-              Exact natural science Faculty of Science: Mathematics
-            </li>
-          </ul>
-
-          <br>
-          <p>Thanks M.Sakhelashvili</p>
         </div>
-
         <a
-          href="./uploads/cv.pdf"
+          href="./uploads/Mishka Sakhelashvili CV.pdf"
           target="_blank"
           class="download"
         >Download CV</a>
