add last version :)

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
               <div class="text">SEO Optimization</div>
               <p>
                 Search engine optimization (SEO) refers to the process of improving your site's organic traffic and
-                ranking on search engines such as Google, Bing, and other search engines. This includes creating
-                high-quality content in addition to monitoring your site's technical health.
+                ranking on search engines such as Google, Bing, and other search engines.
+                This includes creating high-quality content in addition to monitoring your site's technical health.
               </p>
             </div>
           </div>
